--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="container"></div>
 
     <script src="./node_modules/phaser/dist/phaser.js"></script>
-    <script src="./src/init.js"></script>
+    <!--<script src="./src/init.js"></script>-->
+    <script src="./src/Escenas/sceneManager.js"></script>
 </body>
 </html>
