--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <div id="container"></div>
 
     <script src="./node_modules/phaser/dist/phaser.js"></script>
-    <script src="./src/SceneMenu.js"></script>
     <script src="./src/SceneGame.js"></script>
+    <script src="./src/SceneContact.js"></script>
+    <script src="./src/SceneOptions.js"></script>
+    <script src="./src/SceneMenu.js"></script>
     <script src="./src/init.js"></script>
     <!--<script src="./src/Scene Manager.js"></script>-->
 </body>
