Optimización de código

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <script src="./src/SceneMenu.js"></script>
     <script src="./src/SceneLogos.js"></script>
     <script src="./src/init.js"></script><!-- type="module"-->
+    <script type="text/javascript" src="./src/Machine.js"></script>
+    <script type="text/javascript" src="./src/TerraformMachine.js"></script>
+    <script type="text/javascript" src="./src/StationMachine.js"></script>
+    <script type="text/javascript" src="./src/MineMachine.js"></script>
+    <script type="text/javascript" src="./src/CommsMachine.js"></script>
+    <script type="text/javascript" src="./src/ResourceIndicator.js"></script>
+    <script type="text/javascript" src="./src/Bar.js"></script>
     <!--<script src="./src/Scene Manager.js"></script>-->
 </body>
 </html>
