Implmentación estación de transporte y primeras mecánicas en la estación de la Tierra

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <script type="text/javascript" src="./src/CommsMachine.js"></script>
     <script type="text/javascript" src="./src/ResourceIndicator.js"></script>
     <script type="text/javascript" src="./src/Bar.js"></script>
+    <script type="text/javascript" src="./src/Rocket.js"></script>
+    <script type="text/javascript" src="./src/EarthControl.js"></script>
+    <script type="text/javascript" src="./src/Payload.js"></script>
     <!--<script src="./src/Scene Manager.js"></script>-->
 </body>
 </html>
