Update maquinas. nubes, comtador

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="./src/Rocket.js"></script>
     <script type="text/javascript" src="./src/EarthControl.js"></script>
     <script type="text/javascript" src="./src/Payload.js"></script>
-    <!--<script src="./src/Scene Manager.js"></script>-->
+    <script type="text/javascript" src="./src/Counter.js"></script>
+    <script type="text/javascript" src="./src/Cloud.js"></script>
 </body>
 </html>
