--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        body {
+
+            background-color:black;
+        }
+        
+    </style>
 </head>
 <body>
     <div id="container"></div>
@@ -27,5 +35,6 @@
     <script type="text/javascript" src="./src/Payload.js"></script>
     <script type="text/javascript" src="./src/Counter.js"></script>
     <script type="text/javascript" src="./src/Cloud.js"></script>
+    <script type="text/javascript" src="./src/Meteor.js"></script>
 </body>
 </html>
