--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="./src/MineMachine.js"></script>
     <script type="text/javascript" src="./src/CommsMachine.js"></script>
     <script type="text/javascript" src="./src/ResourceIndicator.js"></script>
+    <script type="text/javascript" src="./src/KeyIndicator.js"></script>
     <script type="text/javascript" src="./src/Bar.js"></script>
     <script type="text/javascript" src="./src/Rocket.js"></script>
     <script type="text/javascript" src="./src/EarthControl.js"></script>
