Update escena de derrota

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="container"></div>
 
     <script src="./node_modules/phaser/dist/phaser.js"></script>
+    <script src="./src/SceneGameEnd.js"></script>
     <script src="./src/SceneGame.js"></script>
     <script src="./src/SceneContact.js"></script>
     <script src="./src/SceneOptions.js"></script>
