--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./src/SceneOptions.js"></script>
     <script src="./src/SceneMenu.js"></script>
     <script src="./src/SceneLogos.js"></script>
+    <script src="./src/SceneTutorial.js"></script>
     <script src="./src/init.js"></script><!-- type="module"-->
     <script type="text/javascript" src="./src/Machine.js"></script>
     <script type="text/javascript" src="./src/TerraformMachine.js"></script>
