--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     
     <script src="./node_modules/phaser/dist/phaser.js"></script>
     <script src="./src/SceneGameEnd.js"></script>
+    <script src="./src/ScenePause.js"></script>
     <script src="./src/SceneGame.js"></script>
     <script src="./src/SceneContact.js"></script>
     <script src="./src/SceneOptions.js"></script>
