primera version rest

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         }
         
     </style>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <!--<script src="apiRest.js"></script>-->
 
     <link rel="shortcut icon" type="image/png" href="./Resources/Game/favicon.png"/>
 </head>
@@ -46,6 +48,7 @@
     <script src="./src/SceneGame.js"></script>
     <script src="./src/SceneContact.js"></script>
     <script src="./src/SceneOptions.js"></script>
+    <script src="./src/SceneREST.js"></script>
     <script src="./src/SceneMenu.js"></script>
     <script src="./src/SceneLogos.js"></script>
     <script src="./src/SceneTutorial.js"></script>
