--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         
     </style>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
 
     <!--<script src="apiRest.js"></script>-->
 
