--- a/src/Assets/nameform.html
+++ b/src/Assets/nameform.html
@@ -1,3 +1,18 @@
-<input type="text" name="nameField" placeholder="Enter your name" style="font-size: 32px">
-<input type="button" name="playButton" value="Let's Play" style="font-size: 32px"><br />
-<label for="over18" style="font-size: 32px">Are you over 18?</label> <input type="checkbox" id="over18" name="over18" style="font-size: 32px">
+<style>
+
+
+    #login {
+    background-color:rgba(0, 0, 0, 0);
+    color:black;
+    border: none;
+    outline:none;
+    height:28px;
+
+    font-size: 25px;
+    font-family: menufont;
+}
+</style>
+
+<input type="text" id="login" name="user" placeholder="Username" style="margin-right:16px;" size="16.5">
+<input type="password" id="login" name="password" placeholder="Password" size="16.5">
+<input type="button" name="playButton" value="Login" style="font-size: 32px; margin: 20px"><br />
