update html form

--- a/src/Assets/formRegistro.html
+++ b/src/Assets/formRegistro.html
@@ -1,5 +1,5 @@
 <style>
-    .login { 
+    .login {
     background-color:rgba(0, 0, 0, 0);
     color:black;
     border: none;
@@ -14,7 +14,7 @@
         font-size: 16px;
         font-family: menufont;
     }
-    .btn { 
+    .btn {
     color:yellow;
     border: none;
     background-color: inherit;
@@ -25,9 +25,9 @@
     }
 </style>
 
-<input type="text" class="login" name="user" placeholder="Username" style="margin-right:16px;" size="16.5">
+<input type="text" class="login" name="user" placeholder="Username" size="17"> </br>
+<input type="text" class="login" name="user" placeholder="Username" size="17"> </br>
 <input type="password" class="login" name="password" placeholder="Password" size="16.5">
-<input type="button" name="playButton" value="Login" style="font-size: 32px; margin-right: 20px">
-<p>New in SpaceY? <button class="btn success" name="signUp">Sign up here</button> </p>
+<!--<input type="button" name="playButton" value="Login" style="font-size: 32px;">-->
 <!--<label for="over18" style="font-size: 32px">Are you over 18?</label> <input type="checkbox" id="over18" name="over18" style="font-size: 32px">-->
 <!--<p>New in SpaceY? Sign up <a name="SignUp">here</a></p-->
