--- a/src/Assets/formRegistro.html
+++ b/src/Assets/formRegistro.html
@@ -1,13 +1,15 @@
 <style>
-    .login {
-    background-color:rgba(0, 0, 0, 0);
-    color:black;
-    border: none;
-    outline:none;
-    height:28px;
+    .reg {
+        background-color:rgba(0, 0, 0, 0);
+        color:black;
+        border: none;
+        outline:none;
+        height:28px;
+        margin-bottom: 34px;
+        font-size: 25px;
+        font-family: menufont;
 
-    font-size: 25px;
-    font-family: menufont;
+    
     }
     p {
         color:white;
@@ -25,9 +27,10 @@
     }
 </style>
 
-<input type="text" class="login" name="user" placeholder="Username" size="17"> </br>
-<input type="text" class="login" name="user" placeholder="Username" size="17"> </br>
-<input type="password" class="login" name="password" placeholder="Password" size="16.5">
+<input type="text" class="reg" name="user" placeholder="Username" size="17"> </br>
+<input type="text" class="reg" name="mail" placeholder="Email" size="17"> </br>
+<input type="password" class="reg" name="pass" placeholder="Password" size="17"></br>
+<input type="password" class="reg" name="passConfirm" placeholder="Confirm password" size="17">
 <!--<input type="button" name="playButton" value="Login" style="font-size: 32px;">-->
 <!--<label for="over18" style="font-size: 32px">Are you over 18?</label> <input type="checkbox" id="over18" name="over18" style="font-size: 32px">-->
 <!--<p>New in SpaceY? Sign up <a name="SignUp">here</a></p-->
