Update chat text

--- a/src/Assets/formRegistro.html
+++ b/src/Assets/formRegistro.html
@@ -28,7 +28,7 @@
 </style>
 
 <input type="text" class="reg" name="user" placeholder="Username" size="17"> </br>
-<input type="text" class="reg" name="mail" placeholder="Email" size="17"> </br>
+<input type="text" class="reg" name="email" placeholder="Email" size="17"> </br>
 <input type="password" class="reg" name="pass" placeholder="Password" size="17"></br>
 <input type="password" class="reg" name="passConfirm" placeholder="Confirm password" size="17">
 <!--<input type="button" name="playButton" value="Login" style="font-size: 32px;">-->
