update chat, register, login

--- a/src/Assets/nameform.html
+++ b/src/Assets/nameform.html
@@ -27,7 +27,7 @@
 
 <input type="text" class="login" name="user" placeholder="Username" style="margin-right:16px;" size="16.5">
 <input type="password" class="login" name="password" placeholder="Password" size="16.5">
-<input type="button" name="playButton" value="Login" style="font-size: 32px; margin-right: 20px">
+<!--<input type="button" name="playButton" value="Login" style="font-size: 32px; margin-right: 20px">-->
 <!--<p>New in SpaceY? <button class="btn success" name="signUp">Sign up here</button> </p>-->
 <!--<label for="over18" style="font-size: 32px">Are you over 18?</label> <input type="checkbox" id="over18" name="over18" style="font-size: 32px">-->
 <!--<p>New in SpaceY? Sign up <a name="SignUp">here</a></p-->
