--- a/src/Assets/formChat.html
+++ b/src/Assets/formChat.html
@@ -28,6 +28,8 @@
 </style>
 
 <input type="text" class="reg" name="Chat" placeholder="Enter text" size="30">
+
+<!--<textarea class="reg" name="Chat" placeholder="Enter text" size="30" rows="3" cols="10"></textarea>-->
 <!--<input type="button" name="playButton" value="Login" style="font-size: 32px;">-->
 <!--<label for="over18" style="font-size: 32px">Are you over 18?</label> <input type="checkbox" id="over18" name="over18" style="font-size: 32px">-->
 <!--<p>New in SpaceY? Sign up <a name="SignUp">here</a></p-->
